infra/k8s/base/apps/erp/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erp-web
  namespace: nafura-erp-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: erp-web
  template:
    metadata:
      labels:
        app: erp-web
    spec:
      containers:
        - name: erp-web
          image: erp-web:dev
          ports:
            - containerPort: 80
