infra/k8s/base/apps/erp/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp-backend
  namespace: nafura-erp-dev
spec:
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: erp-backend
