infra/k8s/base/apps/erp/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp-web
  namespace: nafura-erp-dev
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: erp-web
