infra/k8s/base/apps/erp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erp-ingress
  namespace: nafura-erp-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: api.erp.nafura.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: erp-backend
                port:
                  number: 8082
    - host: erp.nafura.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: erp-web
                port:
                  number: 80
